# transit-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config
benches/: my_benchmark.rs  my_benchmark.rs_
src/: bin.rs  cache_codes.rs  de.rs  lib.rs  ser.rs
src/de/: impls.rs  json_verbose.rs
src/ser/: impls.rs  json.rs  json_verbose.rs  key.rs
transit_derive/: Cargo.toml
transit_derive/src/: lib.rs
