[package]
name = "transit-rs"
version = "0.1.0"
authors = ["Evgeny Fomin <fevgenym@gmail.com>"]
edition = "2018"
description = "Transit serialization format support"

[dependencies]
itertools = "0.8.0"
serde_json = "1.0"
lazy_static = "1.3.0"
regex = "1"
transit_derive = { path = "transit_derive" }
chrono = "0.4"

[dev-dependencies]
criterion = "0.2"

# [[bench]]
# name = "my_benchmark"
# harness = false
